- TW-1647 descriptions that are stringified ids (thanks to Daniel Shahaf).
- TW-1648 Typo in Documentation (thanks to Simon W. Jackson).
- TW-1651 Provide opt-out of filter parser's id treatment (thanks to Daniel
          Shahaf).
- TW-1652 task rm misparsed (thanks to Daniel Shahaf).
- TW-1653 info report regression; shouldn't be context sensitive (thanks to
          David Patrick).
- Prevent potential task duplication during import for non-pending tasks.
- Show the active context in "context list", if any is active.
- Fix "task edit" dropping annotation text after newlines.
- Removed obsolete script 'context'.
- Fix "project" verbosity info not showing without "footnote" being manually
  enabled.
- Internal plumbing:  Use variadic templates for format(), reducing code bloat
  and enabling more flexible use of the function.
- Enable "task sync" support by default.  "cmake -DENABLE_SYNC=OFF" allows
  disabling it and building Taskwarrior without libgnutls available.
- An attempt to add or remove a virtual tag is now an error (thanks to Scott M).
- json.array now defaults to "on", making "export" output a JSON array that
  can be parsed by most JSON libraries without changes.
- The '_ids', '_projects', '_tags', '_uuids' helper commands are deprecated,
  and replaced by the new '_unique' helper command, which generates lists of
  unique values for the specified attribute.
- "import" can now import JSON arrays, the new default "export" output.
- The '_tags' helper command now includes virtual tags (thanks to Daniel
  Shahaf).
- When multiple tasks are 'edit'ed, a failure causes the editing to stop (thanks
  to Daniel Shahaf).
- New 'UDA' and 'ORPHAN' virtual tags.
- Commands that do not accept filters or modifications now generate an error
  when extra arguments are specified.
- Improved zsh support (thanks to Daniel Shahaf).
- Dependencies are exported as a JSON array by default, overridable using
  'rc.json.depends.array=off'. Both forms are imported.