@@ -752,6 +752,7 @@
 #define STRING_ERROR_DETAILS         "The setting 'calendar.details.report' must contain a single report name."
 #define STRING_ERROR_NO_FILTER       "Command line filters are not supported by this command."
 #define STRING_ERROR_NO_MODS         "Command line modifications are not supported by this command."
+#define STRING_ERROR_CONFIRM_SIGINT  "Interrupted: No changes made."
 
 // Feedback
 #define STRING_FEEDBACK_NO_TASKS     "タスクがない。"
