@@ -123,6 +123,8 @@
 - TW-1652 task rm misparsed (thanks to Daniel Shahaf).
 - TW-1653 info report regression; shouldn't be context sensitive (thanks to
           David Patrick).
+- TW-1655 Inform "No changes made." when quitting early due to signal (thanks
+          to Daniel Shahaf).
 - Prevent potential task duplication during import for non-pending tasks.
 - Show the active context in "context list", if any is active.
 - Fix "task edit" dropping annotation text after newlines.
